--- a/Fekra/Base.lproj/Main.storyboard
+++ b/Fekra/Base.lproj/Main.storyboard
@@ -214,6 +214,161 @@
             </objects>
             <point key="canvasLocation" x="1786" y="131"/>
         </scene>
+        <!--LoginVC-->
+        <scene sceneID="igg-yi-FXy">
+            <objects>
+                <viewController id="QdH-a0-ueF" customClass="LoginVC" customModule="Fekra" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0xW-ym-7d3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lFE-Mz-uNo">
+                                <rect key="frame" x="20" y="193.5" width="335" height="280"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WbX-A6-5wZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="40"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="0.20257381134969324" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hUb-RZ-qTu">
+                                        <rect key="frame" x="0.0" y="60" width="335" height="40"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="0.20257381134969324" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wK9-Ga-Z02">
+                                        <rect key="frame" x="0.0" y="120" width="335" height="40"/>
+                                        <color key="backgroundColor" red="0.96078431369999995" green="0.50980392159999999" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="Login">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loginBtnPressed:" destination="QdH-a0-ueF" eventType="touchUpInside" id="KsF-KO-tu8"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXa-VQ-Acs">
+                                        <rect key="frame" x="0.0" y="180" width="335" height="40"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2n4-1s-q7H">
+                                        <rect key="frame" x="0.0" y="240" width="335" height="40"/>
+                                        <color key="backgroundColor" red="0.96078431369999995" green="0.50980392159999999" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="Create User">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="createUserPressed:" destination="QdH-a0-ueF" eventType="touchUpInside" id="JZP-kM-1SR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="M5E-n8-m8I" firstAttribute="trailing" secondItem="lFE-Mz-uNo" secondAttribute="trailing" constant="20" id="TMP-aT-Blj"/>
+                            <constraint firstItem="lFE-Mz-uNo" firstAttribute="centerY" secondItem="0xW-ym-7d3" secondAttribute="centerY" id="VTg-Kz-nEN"/>
+                            <constraint firstItem="lFE-Mz-uNo" firstAttribute="centerX" secondItem="0xW-ym-7d3" secondAttribute="centerX" id="Vb5-3n-qNm"/>
+                            <constraint firstItem="lFE-Mz-uNo" firstAttribute="leading" secondItem="M5E-n8-m8I" secondAttribute="leading" constant="20" id="nNY-Ke-GM4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="M5E-n8-m8I"/>
+                    </view>
+                    <connections>
+                        <outlet property="createUserBtn" destination="2n4-1s-q7H" id="T1N-az-j0E"/>
+                        <outlet property="emailTxt" destination="WbX-A6-5wZ" id="JVt-u3-okg"/>
+                        <outlet property="loginBtn" destination="wK9-Ga-Z02" id="xd8-7l-GYH"/>
+                        <outlet property="passwordTxt" destination="hUb-RZ-qTu" id="PmV-wI-CJm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J0m-JX-LmQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="301.60000000000002" y="-571.66416791604206"/>
+        </scene>
+        <!--Create UserVC-->
+        <scene sceneID="Dlo-uH-DwW">
+            <objects>
+                <viewController id="cjb-AH-hZQ" customClass="CreateUserVC" customModule="Fekra" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xug-9h-kG8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="CLV-la-9Rl">
+                                <rect key="frame" x="20" y="153" width="335" height="300"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x4Y-0W-QLV">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="40"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="0.20257381129999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EBM-Jd-hw6">
+                                        <rect key="frame" x="0.0" y="65" width="335" height="40"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="0.20257381129999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username (Public)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PkT-bV-3x8">
+                                        <rect key="frame" x="0.0" y="130" width="335" height="40"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="0.20257381129999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IR5-2H-pq6">
+                                        <rect key="frame" x="0.0" y="195" width="335" height="40"/>
+                                        <color key="backgroundColor" red="0.96078431369999995" green="0.50980392159999999" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="Register">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="createUserBtnPressed:" destination="cjb-AH-hZQ" eventType="touchUpInside" id="cXv-Ai-yOW"/>
+                                            <action selector="loginBtnPressed:" destination="QdH-a0-ueF" eventType="touchUpInside" id="Jwy-3r-1tv"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLt-ky-oy7">
+                                        <rect key="frame" x="0.0" y="260" width="335" height="40"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelBtnPressed:" destination="cjb-AH-hZQ" eventType="touchUpInside" id="3hw-gU-GYl"/>
+                                            <action selector="createUserPressed:" destination="QdH-a0-ueF" eventType="touchUpInside" id="nn4-0Q-VDV"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5iD-0f-mak" firstAttribute="trailing" secondItem="CLV-la-9Rl" secondAttribute="trailing" constant="20" id="EQd-wB-lbE"/>
+                            <constraint firstItem="CLV-la-9Rl" firstAttribute="top" secondItem="5iD-0f-mak" secondAttribute="top" constant="133" id="sYq-im-L0c"/>
+                            <constraint firstItem="CLV-la-9Rl" firstAttribute="leading" secondItem="5iD-0f-mak" secondAttribute="leading" constant="20" id="y22-YS-TKZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5iD-0f-mak"/>
+                    </view>
+                    <connections>
+                        <outlet property="cancelBtn" destination="hLt-ky-oy7" id="xtt-U3-Pxh"/>
+                        <outlet property="createUserBtn" destination="IR5-2H-pq6" id="Vgm-r3-aAP"/>
+                        <outlet property="emailTxt" destination="x4Y-0W-QLV" id="2kp-zn-5QA"/>
+                        <outlet property="passwordTxt" destination="EBM-Jd-hw6" id="AqQ-vu-Vp3"/>
+                        <outlet property="usernameTxt" destination="PkT-bV-3x8" id="6hc-sZ-4mW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fyn-fv-ylL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1021.6" y="-573.46326836581716"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="RKO-Ed-hid">
             <objects>
